[package]
name = "sony-camera-btgps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10"
tokio = { version = "1.27", features = ["full"] }
anyhow = "1.0"
uuid = "1"
chrono = "0.4"
byteorder = "1.4"